# cost-effective-arc-harnesses

./: .gitignore  CLAUDE.md  LICENSE  README.md  RESEARCH_TRAJECTORY.md
data/: README.md
src/: .env.example  .gitignore  compose.yaml  pyproject.toml
src/CoT/: extract_response.py  extract_response_freeform.py  prompt.py  prompt_freeform.py  run.py  run_freeform.py
src/arc_agent/: config.py  main.py
src/arc_agent/agent/: graph.py  runner.py
src/arc_agent/data/: loader.py  types.py
src/arc_agent/eval/: __init__.py
src/arc_agent/grid/: __init__.py  operations.py
src/arc_agent/llm/: client.py  parser.py
src/arc_base/: __init__.py  extract_response.py  prompt.py  run.py
src/baseline/: extract_response.py  prompt.py  run.py
src/database/: __init__.py  backfill.py  backfill_baselines.py  client.py  consolidate.py  export.py  ids.py  metrics.py  migrate.py
src/figures/: _style.py  cross_model_pareto.py  headline_pareto.py  m_sweep_pipeline_vs_orchestrator.py  paper.mplstyle  pipeline_n_t_m_faceted.py  pipeline_n_t_m_surface.py
src/metrics/: CoT_eval_metrics_full.json  CoT_train_metrics.json  CoT_train_metrics_full.json  baseline_eval_metrics_full.json  baseline_train_metrics.json  baseline_train_metrics_full.json  compute_costs.py  cost_per_task.json  pipeline_eval_metrics.json  pipeline_eval_metrics_full.json  pipeline_train_metrics.json  pipeline_train_metrics_full.json  summarize_all.sh
src/orchestrator/: __init__.py  core.py  rendering.py  run.py  spawn.py  test_loop_logic.py  tools.py  types.py
src/pipeline/: .gitignore  README.md  TRANSFORMATION_DEFINER_NOTES.md  io.py  render.py  run.py  selection.py
src/sample_agent_episodes/: sample_execution_trace_007bbfb7.txt
src/shared/: __init__.py  code_exec.py  formatting.py  llm.py  loader.py  types.py
src/stats/: bootstrap.py  load.py  paired.py  pareto.py  plot_pareto.py  preview.py
src/viz/: app.py
(+97 files in other folders)
