[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arc-agent"
version = "0.1.0"
description = "ARC AGI Baseline Agent - A tool-based agentic system for solving ARC tasks"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.2.1",
    "dotenv>=0.9.9",
    "psycopg2-binary>=2.9.12",
    "matplotlib>=3.10.9",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
arc-agent = "arc_agent.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["arc_agent*"]
