[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arc-agi-architectures"
version = "0.1.0"
description = "Agentic architectures for ARC-AGI: single-call baselines, a two-stage explorer/definer pipeline, and a reflective orchestrator."
authors = [{name = "Kabir Moghe"}]
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.2.1",
    "dotenv>=0.9.9",
    "psycopg2-binary>=2.9.12",
    "matplotlib>=3.10.9",
    "seaborn>=0.13.2",
    "streamlit>=1.57.0",
    "pandas>=2.3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "shared*", "baseline*", "CoT*", "arc_base*",
    "pipeline*", "orchestrator*", "database*",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
